Archive2/f1/3e43529d16dd55/output
main.cpp: In function 'int main()':
main.cpp:12:5: error: static assertion failed: 
     static_assert(std::has_trivial_default_constructor<C>::value, "");    
     ^
main.cpp:13:5: error: static assertion failed: 
     static_assert(std::is_trivial<C>::value, ""); 
     ^
main.cpp:15:5: error: static assertion failed: 
     static_assert(std::is_pod<C>::value, "");
     ^
